<resources>
    <string name="app_name">Safar</string>
    <string name="logo_name">Get A Way</string>
    <string name="powered_by">Powered By Shukla Travels</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>


    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.</string>


    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!-- Strings for Dashboard -->

    <!-- Categories -->

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>


    <!-- Titles and Descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the locations that are featured have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!-- Menu Names -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="education">Education</string>
    <string name="sologan_name">Everything your city holds is here!</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <!-- Navigation_Categories -->
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospitals">Hospitals</string>
    <string name="shops_">Shops</string>
    <string name="restaurants_">Restaurants</string>

    <!-- TODO: Retailer Panel Strings -->

    <!-- General Strings -->

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="reatailer_tag_line">We will help you to grow your business by making it online!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_details">Select which contact detail should we use to reset your password?</string>
    <string name="forget_password_details">Enter Your Email Address For which You Want To Reset Your Password!</string>

    <!-- Login page -->

    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>

    <!-- Sign up page -->

    <string name="enter_full_name">Full Name</string>
    <string name="enter_user_name">Username</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_pass_word">Password</string>


    <!-- OPT Screen -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_email">Via Email</string>
    <string name="otp_description_text">Enter one time password sent on your \nmobile number</string>


</resources>
