<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_dashboard_icon"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/menu_search_icon"/>

        <item
            android:id="@+id/nav_categoires"
            android:title="@string/all_categories"
            android:icon="@drawable/menu_categories_icon"/>

        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/menu_add_dashboard_icon"/>

    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"/>



            </group>

        </menu>



    </item>

    <item android:title="Categories">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/menu_restaurant_icon"/>

                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/banks"
                    android:icon="@drawable/profile_icon"/>

                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/menu_education_icon"/>

                <item
                    android:id="@+id/nav_shops"
                    android:title="@string/shops"
                    android:icon="@drawable/menu_shop_icon"/>



            </group>

        </menu>



    </item>

    <item android:title="Share">

        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_icon"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_us_icon"/>





            </group>

        </menu>



    </item>


</menu>